samples/_failures_safe/1761713848_3e39fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87c48d91.c: In function ‘main’:
./samples/SAFE/__tmp_87c48d91.c:179:5: error: expected declaration or statement at end of input
  179 |     printf("----\t\t-----\n");
      |     ^~~~~~
